2007-01-08  Ray Strode <rstrode@redhat.com>

	Fixes #351991

	* gnome-wp-info.c (gnome_wp_info_new): don't try to pull from
	~/.thumbnails directly without checking mtime.

	* gnome-wp-item.c (collect_save_options, gnome_wp_item_get_thumbnail):
	only 	generate thumbnails when a lookup shows there isn't already
	one. Never load a background just to find out its size.

2007-01-07  Thomas Wood  <thos@gnome.org>

	Patch by: Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-capplet.c: (gnome_wp_update_preview): Fixes bug 388616
	(Control center crashes when changing the image name)

2007-01-07  Thomas Wood  <thos@gnome.org>

	Patch by: Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-item.c: (gnome_wp_item_get_thumbnail):
	* gnome-wp-xml.c: (gnome_wp_xml_load_list):

	Apply patch from bug 335220 (mem leaks in gnome-wp-item)


2007-01-06  Lucas Rocha <lucasr.at.mundo@gmail.com>

	Fixes #336286

	* gnome-wp-capplet.c: switched from popt to GOptionContext.
	(wallpaper_properties_init): just iterate over "command_line_files".
	(main): call gnome_program_init with the correct arguments.

2007-01-06  Gabor Kelemen  <kelemeng@gnome.hu>

	* gnome-wp-item.c: Mark message showing background image size
	and type for translation

	Patch from Roozbeh Pournander <roozbeh@farsiweb.info>
	
	Fixes #341899

2006-12-08  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-wp-xml.c: (gnome_wp_xml_load_list): Plug a leak.
	Bug #376949

2006-08-18  Rodney Dawes  <dobey@novell.com>

	* background.desktop.in.in: Use preferences-desktop-wallpaper as the
	icon name per the Icon Naming Specification
	* gnome-background-properties.glade: Set the icon name for the window
	to be preferences-desktop-wallpaper as per the naming spec
	* gnome-wp-capplet.[ch]: Remove GtkIconTheme instance from structure
	(gnome_wp_icon_theme_changed): Don't need this method any longer
	(wallpaper_properties_init): Remove unused variables
	Don't need to get the icon_info to load a pixbuf and set an icon, from