@@ -1,3 +1,7 @@
+2007-01-08  David Sedeño <david@alderia.com>
+
+	* gnome-wp-xml.c: Fix several compile warnings. Fixes #326022
+
 2007-01-08  Ray Strode <rstrode@redhat.com>
 
 	Fixes #351991
